--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="flex-container">
     <div id="Container">
-      <img src="../images/image-qr-code.png" alt="Qr Image" width="400px" height="600px">
+      <img src="../image-qr-code.png" alt="Qr Image" width="400px" height="600px">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
