--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 </head>
 <body>
-  <div class="flex-container">
-    <div id="Container">
-      <img src="image-qr-code.png" alt="Qr Image" width="400px" height="600px">
+  <main>
+    <div>
+      <img src="/images/image-qr-code.png" alt="QR Code to redcirected to frontendmento.io">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-  </div>
+    </div>
+  </main>
 </body>
 </html>
