--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <div>
-      <img src="image-qr-code.png" alt="QR Code to redcirected to frontendmento.io">
+      <img src="image-qr-code.png" alt="QR Code to redirected to frontendmento.io">
       <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
